# openclaw_advisor_bot

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
artifacts/p2_4_browser_sandbox_escalation_bundle/: README.md  evidence.json
artifacts/p2_4_main_24x7_audit_readiness/: 00_AUDIT_MANIFEST.json  01_GIT_LOG.txt  02_GIT_STATUS.txt  03_TEST_RESULTS.txt  04_COVERAGE.json  05_AGENT_TOPOLOGY.json  06_SKILL_VALIDATION.json  07_ROUTING_VALIDATION.json  08_ENV_AUDIT.json  09_SECURITY_SCAN.json  10_PIPELINE_DRY_RUN.json  11_EVIDENCE_VERIFY.json  12_CONFIG_RENDER.json  13_PROVIDER_POLICY.json  14_HEALTH_REPORT.json  15_BLUEPRINT_COMPLIANCE_MATRIX.md  (+3 more)
config/: agent_capability_registry.json  openclaw.template.json  settings.schema.json  supported-openclaw-version.txt
docs/: ARCHITECTURE.md  CLEANROOM_BOOTSTRAP_REPORT.md  ENVIRONMENT_VARIABLES.md  ENV_REQUIRED_REPORT.md  IMPLEMENTATION_LEDGER.md  INSTALL_WINDOWS.md  P1_1_COVERAGE.json  P1_1_ENV_VALIDATION.json  P1_1_HEALTH.json  P1_1_RENDERED_CONFIG.json  P1_1_SECURITY_SCAN.json  P1_1_SKILLS_VALIDATION.json  P1_CLEANROOM_VERIFICATION.json  P1_DEPENDENCY_GRAPH.json  P1_ENV_VALIDATION.md  P1_EXECUTION_BOUNDARY_AUDIT.md  P1_SECRET_SCAN.json  P1_VALIDATION_REPORT.md  P2_1_BASELINE_AUDIT.md  P2_1_LIVE_MT5_REPORT.json  P2_1_LIVE_MT5_REPORT.md  P2_1_POST_PATCH_AUDIT.md  P2_1_RENDER_CONFIG_VALIDATION.json  P2_1_REPORT_PROVENANCE.json  P2_1_SECURITY_REPORT.json  P2_1_SKILL_VALIDATION.json  P2_1_SOAK_REPORT.json  P2_1_SOAK_REPORT.md  P2_1_TEST_RESULTS.json  P2_2_CODEX_RECOVERY_AUDIT.md  P2_2_OPENCLAW_OFFLINE_RUNTIME_AUDIT.json  P2_2_POST_PATCH_AUDIT.md  P2_2_PROVIDER_CONFIGURATION_AUDIT.md  P2_2_PROVIDER_STATIC_VALIDATION.json  P2_2_REPORT_PROVENANCE.json  P2_2_SECURITY_AUDIT.json  P2_2_TEST_RESULTS.json  P2_4_AGENT_SKILL_MATRIX.md  P2_4_BLUEPRINT_COMPLIANCE_MATRIX.json  P2_4_BLUEPRINT_COMPLIANCE_MATRIX.md  (+24 more)
engine/: pyproject.toml
engine/docs/: P2_COVERAGE.json
engine/src/openclaw_super_advisor/: __init__.py  __main__.py  _version.py  agent_registry.py  agent_topology.py  bridge.py  cli.py  code_work_order.py  config.py  constants.py  env.py  event_consumer.py  events.py  health.py  logging_setup.py  market_models.py  paths.py  providers.py  scanning.py  schemas.py  signal_engine.py  skills.py  telegram.py
engine/src/openclaw_super_advisor/main_agent/: __init__.py  planner.py  registry_runtime.py  router.py  runtime.py
engine/src/openclaw_super_advisor/market_data/: __init__.py  backend.py  collector.py  connection.py  cursors.py  fake_backend.py  features.py  fred_adapter.py  fx_basket.py  mt5_readonly.py  normalization.py  quality.py  schemas.py  snapshots.py  symbols.py  timeframes.py
engine/src/openclaw_super_advisor/persistence/: __init__.py
engine/src/openclaw_super_advisor/research/: __init__.py  experiment.py  research_cycle.py
engine/src/openclaw_super_advisor/runtime/: heartbeat.py  market_data_runtime.py  shutdown.py  watchdog.py
engine/src/openclaw_super_advisor/scheduler/: __init__.py  job_queue.py
engine/src/openclaw_super_advisor/storage/: __init__.py  atomic.py  parquet_store.py  sqlite_state.py
engine/tests/: conftest.py  test_env.py  test_health.py
engine/tests/integration/: test_cli.py  test_job_queue.py  test_main_runtime_e2e.py  test_signal_pipeline_e2e.py
engine/tests/live/: test_live_placeholder.py
engine/tests/security/: test_market_data_security.py  test_scanning.py  test_scanning_branches.py  test_scanning_helpers.py
engine/tests/unit/: test_agent_registry.py  test_blueprint_coder.py  test_blueprint_runtime.py  test_config_and_skills.py  test_dual_telegram_architecture.py  test_env.py  test_env_config_helpers.py  test_event_consumer_clock.py  test_experiment.py  test_fred_adapter.py  test_fx_basket.py  test_health.py  test_main_runtime_manager.py  test_main_runtime_registry.py  test_market_data.py  test_market_data_provenance.py  test_market_data_reliability.py  test_misc_runtime.py  test_paths.py  test_providers.py  test_report_artifacts.py  test_signal_engine.py  test_skill_failures.py
scripts/: Start-OpenClawUI.ps1  Stop-OpenClawGateway.ps1  Test-OpenClawUI.ps1  generate_reports.py  p1_validate.py
state/: .env.example  openclaw.json  openclaw.schema.json
tests/: test_cleanroom.py
workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
(+112 files in other folders)
