[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-super-advisor-engine"
version = "1.0.0a0"
description = "Clean-room bootstrap engine for the OpenClaw Super Advisor."
requires-python = ">=3.12,<3.13"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
